Fix spacing issue with code highlighting

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -84,3 +84,9 @@ section.footnotes {
 .MathJax {
 	overflow-x: auto !important;
 }
+
+// Fix a spacing issue in Chroma tables that only have a single line. This
+// might be obsolete at the time of revisiting.
+.chroma .lnt {
+	display: block;
+}
